--- a/package.json
+++ b/package.json
@@ -1,16 +1,49 @@
 {
   "name": "chat-app",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "author": "itamarsegman",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
-  }
+    "aws-sdk": "^2.652.0",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^3.0.0",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.1.1",
+    "geocoder": "^0.2.3",
+    "google-auth-library": "^6.0.0",
+    "helmet": "^3.21.3",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.4",
+    "morgan": "^1.9.1",
+    "node-geocoder": "^3.25.0",
+    "nodemailer": "^6.4.5",
+    "sharp": "^0.25.2",
+    "slugify": "^1.4.0",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ArielAnavi/Chat-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ArielAnavi/Chat-app/issues"
+  },
+  "homepage": "https://github.com/ArielAnavi/Chat-app#readme",
+  "description": ""
 }
